@@ -1,6 +1,7 @@
 1.2.3 (unreleased)
  * Support for connection compressions configuration (SPARKC-124)
  * Support for connection encryption configuration (SPARKC-118)
+ * Fix a bug to support upper case characters in UDT (SPARKC-201)
 
 1.2.2
  * Updated Spark version to 1.2.2, Scala to 2.10.5 / 2.11.6
